--- a/index.html
+++ b/index.html
@@ -2,11 +2,268 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>HTML Academy: Техномарт - Главная</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header> 
+      <a href="#"><img src="https://via.placeholder.com/108x18" width="108" height="18" alt="Логотип Техномарт малый"></a>
+      <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <label>
+          Поиск:
+          <input type="text" name="search">
+        </label>
+      </form>
+      <ul>
+        <li>
+          <img src="https://via.placeholder.com/14x16" width="14" height="16" alt="Иконка закладок">
+          <a href="#">Закладки: 0</a>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/15x15" width="15" height="15" alt="Иконка корзины">
+          <a href="#">Корзина: 0</a>
+        </li>
+        <li>
+          <a href="#">Оформить заказ</a>
+        </li>
+      </ul>
+      <a href="#">Интернет-магазин строительных материалов и инструментов для ремонта</a>
+      <div>
+        <img src="https://via.placeholder.com/19x19" width="19" height="19" alt="Иконка телефона">
+        <a href="tel:+78005558628">+7 800 555-86-28</a>
+        <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+      </div>
+      <ul>
+        <li>
+          <button type="button">Войти</button>
+        </li>
+        <li>
+          <a href="#">Регистрация</a>
+        </li>
+      </ul>
+      <nav>
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Интернет-магазин Техномарт</h1>
+      <section>
+        <h2>Товары и услуги</h2>
+        <div>
+          <h3>ПЕРФОРАТОРЫ</h3>
+          <p>Настоящие мужские игрушки</p>
+          <a href="#"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка влево"></a>
+          <a href="#"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка вправо"></a>
+          <form action="" method="">
+            <input type="radio" name="slides" value="">
+            <input type="radio" name="slides" value="" checked>
+          </form>
+          <a href="#">ОТКРЫТЬ КАТАЛОГ</a>
+        </div>
+        <ul>
+          <li>
+            <h3>Материалы</h3>
+            <a href="#">НА ЛЮБОЙ ВКУС</a>
+            <img src="https://via.placeholder.com/44x65" width="44" height="65" alt="Иконка материалов">
+            <p>NEW</p>
+          </li>
+          <li>
+            <h3>Инструмент</h3>
+            <a href="#">НА ВСЕ СЛУЧАИ</a>
+            <img src="https://via.placeholder.com/75x61" width="75" height="61" alt="Иконка инструмента">
+          </li>
+          <li>
+            <h3>Техника</h3>
+            <a href="#">ДЛЯ СТРОЙКИ</a>
+            <img src="https://via.placeholder.com/78x62" width="78" height="62" alt="Иконка техники">
+          </li>
+          <li>
+            <h3>Скидки 50%</h3>
+            <a href="#">НА 350 ТОВАРОВ</a>
+            <img src="https://via.placeholder.com/59x72" width="59" height="72" alt="Иконка скидок">
+          </li>
+          <li>
+            <h3>Доставка</h3>
+            <a href="#">БЕСПЛАТНО</a>
+            <img src="https://via.placeholder.com/78x63" width="78" height="63" alt="Иконка доставки">
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Популярные товары</h2>
+        <div>
+          <h3>Популярные товары:</h3>
+          <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+        </div>
+        <ul>
+          <li>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+            <h4>Перфоратор BOSCH BFG 9000</h4>
+            <p>32500 Р.</p>
+            <a href="#">25500 Р.</a>
+          </li>
+          <li>
+            <p>NEW</p>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+            <h4>Перфоратор BOSCH BFG 3000</h4>
+            <p>22500 Р.</p>
+            <a href="#">15500 Р.</a>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <a href="#">25500 Р.</a>
+          </li>
+          <li>
+            <p>NEW</p>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+            <h4>Перфоратор BOSCH BFG 2000</h4>
+            <p>22500 Р.</p>
+            <a href="#">12500 Р.</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Популярные производители</h2>
+        <div>
+          <h3>Популярные производители:</h3>
+          <a href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
+        </div>
+        <ul>
+          <li>
+            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип BOSCH"></a>
+          </li>
+          <li>
+            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип Makita"></a>
+          </li>
+          <li>
+            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип DeWalt"></a>
+          </li>
+          <li>
+            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип Интерскол"></a>
+          </li>
+          <li>
+            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип HITACHI"></a>
+          </li>
+          <li>
+            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип LG"></a>
+          </li>
+          <li>
+            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип AEG"></a>
+          </li>
+          <li>
+            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип Metabo"></a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами!</p>
+        <p>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными</p>
+        <ul>
+          <li>
+            <a href="">Доставка</a>
+          </li>
+          <li>
+            <a href="">Гарантия</a>
+          </li>
+          <li>
+            <a href="">Кредит</a>
+          </li>
+        </ul>
+        <div>
+          <h3>ДОСТАВКА</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+        </div>
+      </section>
+      <section>
+        <h2>КОМПАНИЯ "ТЕХНОМАРТ"</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!</p>
+        <p>Техномарт работает со многими транспортными компаниями:</p>
+        <ul>
+          <li>Деловые динии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+        <a href="#"><img src="https://via.placeholder.com/300x158" width="300" height="158" alt="Карта со схемой проезда"></a>
+        <button type="button">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</button>
+      </section>
+      <section>
+        <h2>Нижнее навигационное меню и контакты</h2>
+        <a href="#"><img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип Техномарт большой"></a>
+        <ul>
+          <li>Компания</li>
+          <li>Новости</li>
+          <li>Каталог</li>
+          <li>Доставка</li>
+          <li>Контакты</li>
+        </ul>
+        <address>
+          <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+          <p>+7 800 555-86-28</p>
+        </address>
+        <ul>
+          <li>Материалы</li>
+          <li>Техника</li>
+          <li>Инструмент</li>
+          <li>Спецпредложения</li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>© 2010–2021 Компания «Техномарт»</p>
+      <p>Все права защищены</p>
+      <ul>
+        <li>
+          <a><img src="https://via.placeholder.com/44x44" width="44" height="44" alt="Вконтакте"></a>
+        </li>
+        <li>
+          <a><img src="https://via.placeholder.com/44x44" width="44" height="44" alt="Фейсбук"></a>
+        </li>
+        <li>
+          <a><img src="https://via.placeholder.com/44x44" width="44" height="44" alt="Инстаграм"></a>
+        </li>
+      </ul>
+      <p>Обратная связь:</p>
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      <p>Разработано —</p>
+      <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+    </footer>
+    <section>
+      <h2>Форма обратной связи</h2>
+      <button type="button">Закрыть</button>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <label>Ваше имя:
+          <input type="text" name="name" placeholder="Имя Фамилия">
+        </label>
+        <label>Ваше имя:
+          <input type="email" name="email" placeholder="email@example.com">
+        </label>
+        <label>Текст письма:
+          <textarea name="story" rows="5">В свободной форме</textarea>  
+        </label>
+        <input type="submit" value="ОТПРАВИТЬ">
+      </form>
+    </section>
+    <section>
+      <h2>Как до нас добраться</h2>
+      <button type="button">Закрыть</button>
+      <img src="https://via.placeholder.com/943x449" width="943" height="449" alt="Карта">
+    </section>
   </body>
 </html>
