created catalogue page basic html structure

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
       </ul>
       <a href="#">Интернет-магазин строительных материалов и инструментов для ремонта</a>
       <div>
-        <img src="https://via.placeholder.com/19x19" width="19" height="19" alt="Иконка телефона">
+        <img src="https://via.placeholder.com/19x19" width="19" height="19" alt="Иконка телефонной трубки">
         <a href="tel:+78005558628">+7 800 555-86-28</a>
         <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
       </div>
       <ul>
         <li>
+          <img src="https://via.placeholder.com/20x17" width="20" height="17" alt="Иконка входа в ЛК">
           <button type="button">Войти</button>
         </li>
         <li>
@@ -54,19 +55,25 @@
       </nav>
     </header>
     <main>
-      <h1>Интернет-магазин Техномарт</h1>
+      <h1>Интернет-магазин Техномарт - Главная</h1>
       <section>
-        <h2>Товары и услуги</h2>
+        <h2>Промо-блок: товары и услуги</h2>
         <div>
-          <h3>ПЕРФОРАТОРЫ</h3>
-          <p>Настоящие мужские игрушки</p>
+          <div>
+            <h3>ПЕРФОРАТОРЫ</h3>
+            <p>Настоящие мужские игрушки</p>
+          </div>
+          <div>
+            <h3>ДРЕЛИ</h3>
+            <p>Соседям на радость!</p>
+          </div>
           <a href="#"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка влево"></a>
           <a href="#"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка вправо"></a>
           <form action="" method="">
-            <input type="radio" name="slides" value="">
-            <input type="radio" name="slides" value="" checked>
+            <input type="radio" name="slides" value="drills">
+            <input type="radio" name="slides" value="perforators" checked>
           </form>
-          <a href="#">ОТКРЫТЬ КАТАЛОГ</a>
+          <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
         </div>
         <ul>
           <li>
@@ -184,6 +191,15 @@
           <h3>ДОСТАВКА</h3>
           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
         </div>
+        <div>
+          <h3>ГАРАНТИЯ</h3>
+          <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+        </div>
+        <div>
+          <h3>КРЕДИТ</h3>
+          <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+          <button type="button">ОТПРАВИТь ЗАЯВКУ</button>
+        </div>
       </section>
       <section>
         <h2>КОМПАНИЯ "ТЕХНОМАРТ"</h2>
@@ -242,7 +258,7 @@
       <p>Обратная связь:</p>
       <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       <p>Разработано —</p>
-      <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
     </footer>
     <section>
       <h2>Форма обратной связи</h2>
