--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,266 @@
     <title>HTML Academy: Техномарт - Каталог</title>
   </head>
   <body>
-  
+    <header> 
+      <a href="index.html"><img src="https://via.placeholder.com/108x18" width="108" height="18" alt="Логотип Техномарт малый"></a>
+      <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <label>
+          Поиск:
+          <input type="text" name="search">
+        </label>
+      </form>
+      <ul>
+        <li>
+          <img src="https://via.placeholder.com/14x16" width="14" height="16" alt="Иконка закладок">
+          <a href="#">Закладки: 0</a>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/15x15" width="15" height="15" alt="Иконка корзины">
+          <a href="#">Корзина: 10</a>
+        </li>
+        <li>
+          <a href="#">Оформить заказ</a>
+        </li>
+      </ul>
+      <a href="#">Интернет-магазин строительных материалов и инструментов для ремонта</a>
+      <div>
+        <img src="https://via.placeholder.com/19x19" width="19" height="19" alt="Иконка телефонной трубки">
+        <a href="tel:+78005558628">+7 800 555-86-28</a>
+        <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+      </div>
+      <ul>
+        <li>
+          <img src="https://via.placeholder.com/20x18" width="20" height="18" alt="Иконка выхода из ЛК">
+          <span>Равшан Джамшутович</span>
+          <button type="button">Выйти</button>
+        </li>
+        <li>
+          <a href="#">Мои заказы</a>
+        </li>
+        <li>
+          <a href="#">Личный кабинет</a>
+        </li>
+      </ul>
+      <nav>
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Интернет-магазин Техномарт - Каталог</h1>
+      <section>
+        <h2>Хлебные крошки</h2>
+        <ul>
+          <li>
+            <a href="index.html"><img src="https://via.placeholder.com/14x12" width="14" height="12" alt="Домой"></a>
+          </li>
+          <li>
+            <a href="#">КАТАЛОГ</a>
+          </li>
+          <li>
+            <a href="#">ИНСТРУМЕНТ</a>
+          </li>
+          <li>
+            <a href="#">ПЕРФОРАТОРЫ</a>
+          </li>
+        </ul>
+      </section>
+      <p>ПЕРФОРАТОРЫ</p>
+      <p>ФИЛЬТР:</p>
+      <p>СОРТИРОВКА:</p>
+      <ul>
+        <li>
+          <a href="#">ПО ЦЕНЕ</a>
+        </li>
+        <li>
+          <a href="#">ПО ТИПУ</a>
+        </li>
+        <li>
+          <a href="#">ПО ФУНКЦИОНАЛУ</a>
+        </li>
+        <li>
+          <a href="#"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по возрастанию"></a>
+        </li>
+        <li>
+          <a href="#"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по убыванию"></a>
+        </li>
+      </ul>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <fieldset>
+          <legend>ЦЕНА:</legend>
+          <input type="range" name="price" min="0" max="30000" step="1000" value="0">
+          <input type="text" name="min-price" value="0">
+          <input type="text" name="max-price" value="30000">
+        </fieldset>
+        <fieldset>
+          <legend>ПРОИЗВОДИТЕЛИ:</legend>
+          <label>
+            <input type="checkbox" name="manufacturer" checked value="BOSCH">
+            BOSCH
+          </label>
+          <label>
+            <input type="checkbox" name="manufacturer" value="INTERSKOL">
+            ИНТЕРСКОЛ
+          </label>
+          <label>
+            <input type="checkbox" name="manufacturer" checked value="MAKITA">
+            MAKITA
+          </label>
+          <label>
+            <input type="checkbox" name="manufacturer" value="DEWALT">
+            DEWALT
+          </label>
+          <label>
+            <input type="checkbox" name="manufacturer" value="HITACHI">
+            HITACHI
+          </label>
+        </fieldset>
+        <fieldset>
+          <legend>ПИТАНИЕ:</legend>
+          <label>
+            <input type="radio" name="power" checked value="battery">
+            АККУМУЛЯТОРНЫЕ
+          </label>
+          <label>
+            <input type="radio" name="power" value="grid">
+            СЕТЕВЫЕ
+          </label>
+        </fieldset>
+        <input type="submit" value="ПОКАЗАТЬ">
+      </form>
+      <section>
+        <h2>Карточки товаров</h2>
+        <ul>
+          <li>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <a href="#">25500 Р.</a>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <a href="#">25500 Р.</a>
+          </li>
+          <li>
+            <p>NEW</p>
+            <p>
+              <button type="button">КУПИТЬ</button>
+              <button type="button">В ЗАКЛАДКИ</button>
+            </p>
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <a href="#">25500 Р.</a>
+          </li>
+          <li>
+            <p>NEW</p>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+            <h4>Перфоратор BOSCH BFG 3000</h4>
+            <p>22500 Р.</p>
+            <a href="#">15500 Р.</a>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <a href="#">25500 Р.</a>
+          </li>
+          <li>
+            <p>NEW</p>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+            <h4>Перфоратор BOSCH BFG 2000</h4>
+            <a href="#">12500 Р.</a>
+          </li>
+          <li>
+            <p>NEW</p>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+            <h4>Перфоратор BOSCH BFG 3000</h4>
+            <p>22500 Р.</p>
+            <a href="#">15500 Р.</a>
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+            <h4>Перфоратор BOSCH BFG 6000</h4>
+            <p>30500 Р.</p>
+            <a href="#">25500 Р.</a>
+          </li>
+          <li>
+            <p>NEW</p>
+            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+            <h4>Перфоратор BOSCH BFG 2000</h4>
+            <a href="#">12500 Р.</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Навигация по страницам каталога</h2>
+        <ul>
+          <a href="#">1</a>
+          <a href="#">2</a>
+          <a href="#">3</a>
+          <a href="#">СЛЕДУЮЩАЯ</a>
+        </ul>
+      </section>
+      <article>
+        <h2>ПАРУ СЛОВ О ПЕРФОРАТОРАХ</h2>
+        <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+      </article>
+      <section>
+        <h2>Нижнее навигационное меню и контакты</h2>
+        <a href="#"><img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип Техномарт большой"></a>
+        <ul>
+          <li>Компания</li>
+          <li>Новости</li>
+          <li>Каталог</li>
+          <li>Доставка</li>
+          <li>Контакты</li>
+        </ul>
+        <address>
+          <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+          <p>+7 800 555-86-28</p>
+        </address>
+        <ul>
+          <li>Материалы</li>
+          <li>Техника</li>
+          <li>Инструмент</li>
+          <li>Спецпредложения</li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>© 2010–2021 Компания «Техномарт»</p>
+      <p>Все права защищены</p>
+      <ul>
+        <li>
+          <a><img src="https://via.placeholder.com/44x44" width="44" height="44" alt="Вконтакте"></a>
+        </li>
+        <li>
+          <a><img src="https://via.placeholder.com/44x44" width="44" height="44" alt="Фейсбук"></a>
+        </li>
+        <li>
+          <a><img src="https://via.placeholder.com/44x44" width="44" height="44" alt="Инстаграм"></a>
+        </li>
+      </ul>
+      <p>Обратная связь:</p>
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      <p>Разработано —</p>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+    </footer>
+    <section>
+      <button type="button">Закрыть</button>
+      <img src="https://via.placeholder.com/66x66" width="66" height="66" alt="Белая галочка на круглом зелёном фоне">
+      <h2>Товар добавлен в корзину!</h2>
+      <button type="button">ОФОРМИТЬ ЗАКАЗ</button>
+      <button type="button">ПРОДОЛЖИТЬ ПОКУПКИ</button>
+    </section>
   </body>
 </html>
