fixed validator errors

--- a/index.html
+++ b/index.html
@@ -69,10 +69,8 @@
           </div>
           <a href="#"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка влево"></a>
           <a href="#"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка вправо"></a>
-          <form action="" method="">
-            <input type="radio" name="slides" value="drills">
-            <input type="radio" name="slides" value="perforators" checked>
-          </form>
+          <input type="radio" name="slides" value="drills">
+          <input type="radio" name="slides" value="perforators" checked>
           <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
         </div>
         <ul>
@@ -223,21 +221,21 @@
         <h2>Нижнее навигационное меню и контакты</h2>
         <a href="#"><img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип Техномарт большой"></a>
         <ul>
-          <li>Компания</li>
-          <li>Новости</li>
-          <li>Каталог</li>
-          <li>Доставка</li>
-          <li>Контакты</li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
         <address>
           <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
           <p>+7 800 555-86-28</p>
         </address>
         <ul>
-          <li>Материалы</li>
-          <li>Техника</li>
-          <li>Инструмент</li>
-          <li>Спецпредложения</li>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
         </ul>
       </section>
     </main>
