--- a/catalog.html
+++ b/catalog.html
@@ -208,10 +208,10 @@
       <section>
         <h2>Навигация по страницам каталога</h2>
         <ul>
-          <a href="#">1</a>
-          <a href="#">2</a>
-          <a href="#">3</a>
-          <a href="#">СЛЕДУЮЩАЯ</a>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">СЛЕДУЮЩАЯ</a></li>
         </ul>
       </section>
       <article>
@@ -222,21 +222,21 @@
         <h2>Нижнее навигационное меню и контакты</h2>
         <a href="#"><img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип Техномарт большой"></a>
         <ul>
-          <li>Компания</li>
-          <li>Новости</li>
-          <li>Каталог</li>
-          <li>Доставка</li>
-          <li>Контакты</li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
         <address>
           <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
           <p>+7 800 555-86-28</p>
         </address>
         <ul>
-          <li>Материалы</li>
-          <li>Техника</li>
-          <li>Инструмент</li>
-          <li>Спецпредложения</li>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
         </ul>
       </section>
     </main>
