--- a/catalog.html
+++ b/catalog.html
@@ -10,32 +10,28 @@
       <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
       <form action="https://echo.htmlacademy.ru" method="post">
         <label>
-          Поиск:
-          <input type="text" name="search">
+          <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
+          <input type="text" name="search" placeholder="Поиск:">
         </label>
       </form>
       <ul>
         <li>
-          <img src="https://via.placeholder.com/14x16" width="14" height="16" alt="Иконка закладок">
           <a href="#">Закладки: 0</a>
         </li>
         <li>
-          <img src="https://via.placeholder.com/15x15" width="15" height="15" alt="Иконка корзины">
           <a href="#">Корзина: 10</a>
         </li>
         <li>
           <a href="#">Оформить заказ</a>
         </li>
       </ul>
-      <a href="#">Интернет-магазин строительных материалов и инструментов для ремонта</a>
+      <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
       <div>
-        <img src="https://via.placeholder.com/19x19" width="19" height="19" alt="Иконка телефонной трубки">
         <a href="tel:+78005558628">+7 800 555-86-28</a>
         <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
       </div>
       <ul>
         <li>
-          <img src="https://via.placeholder.com/20x18" width="20" height="18" alt="Иконка выхода из ЛК">
           <span>Равшан Джамшутович</span>
           <button type="button">Выйти</button>
         </li>
@@ -77,18 +73,18 @@
           </li>
         </ul>
       </section>
-      <p>ПЕРФОРАТОРЫ</p>
-      <p>ФИЛЬТР:</p>
-      <p>СОРТИРОВКА:</p>
+      <p>Перфораторы</p>
+      <p>Фильтр:</p>
+      <p>Сортировка:</p>
       <ul>
         <li>
-          <a href="#">ПО ЦЕНЕ</a>
+          <a href="#">По цене</a>
         </li>
         <li>
-          <a href="#">ПО ТИПУ</a>
+          <a href="#">По типу</a>
         </li>
         <li>
-          <a href="#">ПО ФУНКЦИОНАЛУ</a>
+          <a href="#">По функционалу</a>
         </li>
         <li>
           <a href="#"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по возрастанию"></a>
@@ -99,46 +95,46 @@
       </ul>
       <form action="https://echo.htmlacademy.ru" method="post">
         <fieldset>
-          <legend>ЦЕНА:</legend>
+          <legend>Цена:</legend>
           <input type="range" name="price" min="0" max="30000" step="1000" value="0">
           <input type="text" name="min-price" value="0">
           <input type="text" name="max-price" value="30000">
         </fieldset>
         <fieldset>
-          <legend>ПРОИЗВОДИТЕЛИ:</legend>
+          <legend>Производители:</legend>
           <label>
             <input type="checkbox" name="manufacturer" checked value="BOSCH">
-            BOSCH
+            Bosch
           </label>
           <label>
             <input type="checkbox" name="manufacturer" value="INTERSKOL">
-            ИНТЕРСКОЛ
+            Интерскол
           </label>
           <label>
             <input type="checkbox" name="manufacturer" checked value="MAKITA">
-            MAKITA
+            Makita
           </label>
           <label>
             <input type="checkbox" name="manufacturer" value="DEWALT">
-            DEWALT
+            Dewalt
           </label>
           <label>
             <input type="checkbox" name="manufacturer" value="HITACHI">
-            HITACHI
+            Hitachi
           </label>
         </fieldset>
         <fieldset>
-          <legend>ПИТАНИЕ:</legend>
+          <legend>Питание:</legend>
           <label>
             <input type="radio" name="power" checked value="battery">
-            АККУМУЛЯТОРНЫЕ
+            Аккумуляторные
           </label>
           <label>
             <input type="radio" name="power" value="grid">
-            СЕТЕВЫЕ
+            Сетевые
           </label>
         </fieldset>
-        <input type="submit" value="ПОКАЗАТЬ">
+        <button type="submit">Показать</button>
       </form>
       <section>
         <h2>Карточки товаров</h2>
@@ -156,7 +152,7 @@
             <a href="#">25500 Р.</a>
           </li>
           <li>
-            <p>NEW</p>
+            <p>New</p>
             <p>
               <button type="button">КУПИТЬ</button>
               <button type="button">В ЗАКЛАДКИ</button>
@@ -166,7 +162,7 @@
             <a href="#">25500 Р.</a>
           </li>
           <li>
-            <p>NEW</p>
+            <p>New</p>
             <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
             <h4>Перфоратор BOSCH BFG 3000</h4>
             <p>22500 Р.</p>
@@ -179,13 +175,13 @@
             <a href="#">25500 Р.</a>
           </li>
           <li>
-            <p>NEW</p>
+            <p>New</p>
             <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
             <h4>Перфоратор BOSCH BFG 2000</h4>
             <a href="#">12500 Р.</a>
           </li>
           <li>
-            <p>NEW</p>
+            <p>New</p>
             <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
             <h4>Перфоратор BOSCH BFG 3000</h4>
             <p>22500 Р.</p>
@@ -198,7 +194,7 @@
             <a href="#">25500 Р.</a>
           </li>
           <li>
-            <p>NEW</p>
+            <p>New</p>
             <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
             <h4>Перфоратор BOSCH BFG 2000</h4>
             <a href="#">12500 Р.</a>
@@ -211,11 +207,11 @@
           <li><a href="#">1</a></li>
           <li><a href="#">2</a></li>
           <li><a href="#">3</a></li>
-          <li><a href="#">СЛЕДУЮЩАЯ</a></li>
+          <li><a href="#">Следующая</a></li>
         </ul>
       </section>
       <article>
-        <h2>ПАРУ СЛОВ О ПЕРФОРАТОРАХ</h2>
+        <h2>Пару слов о перфораторах</h2>
         <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
       </article>
       <section>
@@ -230,7 +226,7 @@
         </ul>
         <address>
           <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
-          <p>+7 800 555-86-28</p>
+          <a href="tel:+78005558628">+7 800 555-86-28</a>
         </address>
         <ul>
           <li><a href="#">Материалы</a></li>
@@ -263,8 +259,8 @@
       <button type="button">Закрыть</button>
       <img src="https://via.placeholder.com/66x66" width="66" height="66" alt="Белая галочка на круглом зелёном фоне">
       <h2>Товар добавлен в корзину!</h2>
-      <button type="button">ОФОРМИТЬ ЗАКАЗ</button>
-      <button type="button">ПРОДОЛЖИТЬ ПОКУПКИ</button>
+      <button type="button">Оформить заказ</button>
+      <button type="button">Продолжить покупки</button>
     </section>
   </body>
 </html>
