--- a/index.html
+++ b/index.html
@@ -7,35 +7,30 @@
   <body>
     <header> 
       <a href="#"><img src="https://via.placeholder.com/108x18" width="108" height="18" alt="Логотип Техномарт малый"></a>
-      <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
       <form action="https://echo.htmlacademy.ru" method="post">
         <label>
-          Поиск:
-          <input type="text" name="search">
+          <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
+          <input type="text" name="search" placeholder="Поиск:">
         </label>
       </form>
       <ul>
         <li>
-          <img src="https://via.placeholder.com/14x16" width="14" height="16" alt="Иконка закладок">
           <a href="#">Закладки: 0</a>
         </li>
         <li>
-          <img src="https://via.placeholder.com/15x15" width="15" height="15" alt="Иконка корзины">
           <a href="#">Корзина: 0</a>
         </li>
         <li>
           <a href="#">Оформить заказ</a>
         </li>
       </ul>
-      <a href="#">Интернет-магазин строительных материалов и инструментов для ремонта</a>
+      <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
       <div>
-        <img src="https://via.placeholder.com/19x19" width="19" height="19" alt="Иконка телефонной трубки">
         <a href="tel:+78005558628">+7 800 555-86-28</a>
         <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
       </div>
       <ul>
         <li>
-          <img src="https://via.placeholder.com/20x17" width="20" height="17" alt="Иконка входа в ЛК">
           <button type="button">Войти</button>
         </li>
         <li>
@@ -60,88 +55,89 @@
         <h2>Промо-блок: товары и услуги</h2>
         <div>
           <div>
-            <h3>ПЕРФОРАТОРЫ</h3>
+            <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
           </div>
           <div>
-            <h3>ДРЕЛИ</h3>
+            <h3>Дрели</h3>
             <p>Соседям на радость!</p>
           </div>
-          <a href="#"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка влево"></a>
-          <a href="#"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка вправо"></a>
-          <input type="radio" name="slides" value="drills">
-          <input type="radio" name="slides" value="perforators" checked>
-          <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+          <button type="button"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка влево"></button>
+          <button type="button"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка вправо"></button>
+          <button type="button" name="drills" disabled></button>
+          <button type="button" name="perforators"></button>
+          <a href="catalog.html">Открыть каталог</a>
         </div>
         <ul>
           <li>
             <h3>Материалы</h3>
-            <a href="#">НА ЛЮБОЙ ВКУС</a>
-            <img src="https://via.placeholder.com/44x65" width="44" height="65" alt="Иконка материалов">
-            <p>NEW</p>
+            <a href="#">На любой вкус</a>
+            <p>New</p>
           </li>
           <li>
             <h3>Инструмент</h3>
-            <a href="#">НА ВСЕ СЛУЧАИ</a>
-            <img src="https://via.placeholder.com/75x61" width="75" height="61" alt="Иконка инструмента">
-          </li>
+            <a href="#">На все случаи</a>
+            </li>
           <li>
             <h3>Техника</h3>
-            <a href="#">ДЛЯ СТРОЙКИ</a>
-            <img src="https://via.placeholder.com/78x62" width="78" height="62" alt="Иконка техники">
-          </li>
+            <a href="#">Для стройки</a>
+            </li>
           <li>
             <h3>Скидки 50%</h3>
-            <a href="#">НА 350 ТОВАРОВ</a>
-            <img src="https://via.placeholder.com/59x72" width="59" height="72" alt="Иконка скидок">
-          </li>
+            <a href="#">На 350 товаров</a>
+            </li>
           <li>
             <h3>Доставка</h3>
-            <a href="#">БЕСПЛАТНО</a>
-            <img src="https://via.placeholder.com/78x63" width="78" height="63" alt="Иконка доставки">
-          </li>
+            <a href="#">Бесплатно</a>
+            </li>
         </ul>
       </section>
       <section>
-        <h2>Популярные товары</h2>
         <div>
           <h3>Популярные товары:</h3>
-          <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+          <a href="#">Все популярные товары</a>
         </div>
         <ul>
           <li>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
-            <h4>Перфоратор BOSCH BFG 9000</h4>
-            <p>32500 Р.</p>
-            <a href="#">25500 Р.</a>
+            <a href="#">
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+              <h4>Перфоратор BOSCH BFG 9000</h4>
+              <p>32500 Р.</p>
+              <p>25500 Р.</p>
+            </a>
           </li>
           <li>
-            <p>NEW</p>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
-            <h4>Перфоратор BOSCH BFG 3000</h4>
-            <p>22500 Р.</p>
-            <a href="#">15500 Р.</a>
+            <a href="#">
+              <p>New</p>
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+              <h4>Перфоратор BOSCH BFG 3000</h4>
+              <p>22500 Р.</p>
+              <p>15500 Р.</p>
+            </a>
           </li>
           <li>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-            <h4>Перфоратор BOSCH BFG 6000</h4>
-            <p>30500 Р.</p>
-            <a href="#">25500 Р.</a>
+            <a href="#">
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+              <h4>Перфоратор BOSCH BFG 6000</h4>
+              <p>30500 Р.</p>
+              <p>25500 Р.</p>
+            </a>
           </li>
           <li>
-            <p>NEW</p>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
-            <h4>Перфоратор BOSCH BFG 2000</h4>
-            <p>22500 Р.</p>
-            <a href="#">12500 Р.</a>
+            <a href="#">
+              <p>New</p>
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+              <h4>Перфоратор BOSCH BFG 2000</h4>
+              <p>22500 Р.</p>
+              <p>12500 Р.</p>
+            </a>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Популярные производители</h2>
         <div>
           <h3>Популярные производители:</h3>
-          <a href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
+          <a href="#">Все производители</a>
         </div>
         <ul>
           <li>
@@ -186,21 +182,21 @@
           </li>
         </ul>
         <div>
-          <h3>ДОСТАВКА</h3>
+          <h3>Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
         </div>
         <div>
-          <h3>ГАРАНТИЯ</h3>
+          <h3>Гарантия</h3>
           <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
         </div>
         <div>
-          <h3>КРЕДИТ</h3>
+          <h3>Кредит</h3>
           <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-          <button type="button">ОТПРАВИТь ЗАЯВКУ</button>
+          <a href="#">Отправить заявку</a>
         </div>
       </section>
       <section>
-        <h2>КОМПАНИЯ "ТЕХНОМАРТ"</h2>
+        <h2>Компания «Техномарт»</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России!</p>
         <p>Техномарт работает со многими транспортными компаниями:</p>
@@ -209,13 +205,13 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
+        <a href="#">Подробнее о компании</a>
       </section>
       <section>
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
         <a href="#"><img src="https://via.placeholder.com/300x158" width="300" height="158" alt="Карта со схемой проезда"></a>
-        <button type="button">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</button>
+        <a href="#">Заблудились? Напишите нам!</a>
       </section>
       <section>
         <h2>Нижнее навигационное меню и контакты</h2>
@@ -229,7 +225,7 @@
         </ul>
         <address>
           <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
-          <p>+7 800 555-86-28</p>
+          <a href="tel:+78005558628">+7 800 555-86-28</a>
         </address>
         <ul>
           <li><a href="#">Материалы</a></li>
@@ -271,7 +267,7 @@
         <label>Текст письма:
           <textarea name="story" rows="5">В свободной форме</textarea>  
         </label>
-        <input type="submit" value="ОТПРАВИТЬ">
+        <button type="submit">Отправить</button>
       </form>
     </section>
     <section>
