--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,6 @@
   <body>
     <header> 
       <a href="index.html"><img src="https://via.placeholder.com/108x18" width="108" height="18" alt="Логотип Техномарт малый"></a>
-      <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
       <form action="https://echo.htmlacademy.ru" method="post">
         <label>
           <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
@@ -78,19 +77,19 @@
       <p>Сортировка:</p>
       <ul>
         <li>
-          <a href="#">По цене</a>
+          <button type="button">По цене</button>
         </li>
         <li>
-          <a href="#">По типу</a>
+          <button type="button">По типу</button>
         </li>
         <li>
-          <a href="#">По функционалу</a>
+          <button type="button">По функционалу</button>
         </li>
         <li>
-          <a href="#"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по возрастанию"></a>
+          <button type="button"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по возрастанию"></button>
         </li>
         <li>
-          <a href="#"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по убыванию"></a>
+          <button type="button"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по убыванию"></button>
         </li>
       </ul>
       <form action="https://echo.htmlacademy.ru" method="post">
@@ -140,64 +139,82 @@
         <h2>Карточки товаров</h2>
         <ul>
           <li>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p>
-            <a href="#">25500 Р.</a>
+            <a href="#">
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <p>25500 Р.</p>
+            </a>
           </li>
           <li>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p>
-            <a href="#">25500 Р.</a>
+            <a href="#">
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <p>25500 Р.</p>
+            </a>
           </li>
           <li>
-            <p>New</p>
-            <p>
-              <button type="button">КУПИТЬ</button>
-              <button type="button">В ЗАКЛАДКИ</button>
-            </p>
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p>
-            <a href="#">25500 Р.</a>
+            <a href="#">
+              <p>New</p>
+              <p>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+              </p>
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <p>25500 Р.</p>
+            </a>
           </li>
           <li>
-            <p>New</p>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <p>22500 Р.</p>
-            <a href="#">15500 Р.</a>
+            <a href="#">
+              <p>New</p>
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <p>22500 Р.</p>
+              <p>15500 Р.</p>
+            </a>
           </li>
           <li>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p>
-            <a href="#">25500 Р.</a>
+            <a href="#">
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <p>25500 Р.</p>
+            </a>
           </li>
           <li>
-            <p>New</p>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <a href="#">12500 Р.</a>
+            <a href="#">  
+              <p>New</p>
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <p>12500 Р.</p>
+            </a>
           </li>
           <li>
-            <p>New</p>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <p>22500 Р.</p>
-            <a href="#">15500 Р.</a>
+            <a href="#">
+              <p>New</p>
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <p>22500 Р.</p>
+              <p>15500 Р.</p>
+            </a>
           </li>
           <li>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p>
-            <a href="#">25500 Р.</a>
+            <a href="#">
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p>
+              <p>25500 Р.</p>
+            </a>
           </li>
           <li>
-            <p>New</p>
-            <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <a href="#">12500 Р.</a>
+            <a href="#">
+              <p>New</p>
+              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <p>12500 Р.</p>
+            </a>
           </li>
         </ul>
       </section>
@@ -216,7 +233,7 @@
       </article>
       <section>
         <h2>Нижнее навигационное меню и контакты</h2>
-        <a href="#"><img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип Техномарт большой"></a>
+        <a href="index.html"><img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип Техномарт большой"></a>
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
