--- a/catalog.html
+++ b/catalog.html
@@ -157,10 +157,8 @@
           <li>
             <a href="#">
               <p>New</p>
-              <p>
-                <button type="button">Купить</button>
-                <button type="button">В закладки</button>
-              </p>
+              <p>Купить</p>
+              <p>В закладки</p>
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <p>30500 Р.</p>
               <p>25500 Р.</p>
