corrected mistakes in catalog.html and added content images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт - Главная</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header> 
@@ -57,10 +61,12 @@
           <div>
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
+            <img src="img/man-with-perforator.jpg" width="620" height="266" alt="Мужчина долбит бетонную стену перфоратором">
           </div>
           <div>
             <h3>Дрели</h3>
             <p>Соседям на радость!</p>
+            <img src="img/man-with-drill.jpg" width="620" height="266" alt="Мужчина сверлит кирпичную стену дрелью">
           </div>
           <button type="button"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка влево"></button>
           <button type="button"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка вправо"></button>
@@ -100,7 +106,7 @@
         <ul>
           <li>
             <a href="#">
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img/bosch-bfg-9000.jpg" width="184" height="164" alt="Большой синий перфоратор с длинным буром и шнуром">
               <h3>Перфоратор BOSCH BFG 9000</h3>
               <p>32500 Р.</p>
               <p>25500 Р.</p>
@@ -109,7 +115,7 @@
           <li>
             <a href="#">
               <p>New</p>
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/bosch-bfg-3000.jpg" width="184" height="164" alt="Синий перфоратор с коротким буром и аккумулятором">
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <p>22500 Р.</p>
               <p>15500 Р.</p>
@@ -117,7 +123,7 @@
           </li>
           <li>
             <a href="#">
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/bosch-bfg-6000.jpg" width="184" height="164" alt="Синий перфоратор с обычным буром, упором и аккумулятором">
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <p>30500 Р.</p>
               <p>25500 Р.</p>
@@ -126,7 +132,7 @@
           <li>
             <a href="#">
               <p>New</p>
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img/bosch-bfg-2000.jpg" width="184" height="164" alt="Синий перфоратор с коротким буром и аккумулятором">
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <p>22500 Р.</p>
               <p>12500 Р.</p>
@@ -141,28 +147,28 @@
         </div>
         <ul>
           <li>
-            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип BOSCH"></a>
+            <a href="#"><img src="img/bosch-logo.png" width="220" height="145" alt="Логотип BOSCH"></a>
           </li>
           <li>
-            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип Makita"></a>
+            <a href="#"><img src="img/makita-logo.png" width="220" height="145" alt="Логотип Makita"></a>
           </li>
           <li>
-            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип DeWalt"></a>
+            <a href="#"><img src="img/dewalt-logo.png" width="220" height="145" alt="Логотип DeWalt"></a>
           </li>
           <li>
-            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип Интерскол"></a>
+            <a href="#"><img src="img/interskol-logo.png" width="220" height="145" alt="Логотип Интерскол"></a>
           </li>
           <li>
-            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип HITACHI"></a>
+            <a href="#"><img src="img/hitachi-logo.png" width="220" height="145" alt="Логотип HITACHI"></a>
           </li>
           <li>
-            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип LG"></a>
+            <a href="#"><img src="img/lg-logo.png" width="220" height="145" alt="Логотип LG"></a>
           </li>
           <li>
-            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип AEG"></a>
+            <a href="#"><img src="img/aeg-logo.png" width="220" height="145" alt="Логотип AEG"></a>
           </li>
           <li>
-            <a href="#"><img src="https://via.placeholder.com/220x145" width="220" height="145" alt="Логотип Metabo"></a>
+            <a href="#"><img src="img/metabo-logo.png" width="220" height="145" alt="Логотип Metabo"></a>
           </li>
         </ul>
       </section>
@@ -210,7 +216,7 @@
       <section>
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a href="#"><img src="https://via.placeholder.com/300x158" width="300" height="158" alt="Карта со схемой проезда"></a>
+        <a href="#"><img src="img/minimap.png" width="300" height="158" alt="Карта со схемой проезда"></a>
         <a href="#">Заблудились? Напишите нам!</a>
       </section>
       <section>
@@ -273,7 +279,7 @@
     <section>
       <h2>Как до нас добраться</h2>
       <button type="button">Закрыть</button>
-      <img src="https://via.placeholder.com/943x449" width="943" height="449" alt="Карта">
+      <img src="img/map.png" width="943" height="449" alt="Карта">
     </section>
   </body>
 </html>
