--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт - Каталог</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header> 
@@ -31,8 +35,8 @@
       </div>
       <ul>
         <li>
-          <span>Равшан Джамшутович</span>
-          <button type="button">Выйти</button>
+          <a href="#">Равшан Джамшутович</a>
+          <a href="#">Выйти</a>
         </li>
         <li>
           <a href="#">Мои заказы</a>
@@ -45,7 +49,7 @@
         <ul>
           <li><a href="#">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
+          <li>Каталог</li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -62,157 +66,160 @@
             <a href="index.html"><img src="https://via.placeholder.com/14x12" width="14" height="12" alt="Домой"></a>
           </li>
           <li>
-            <a href="#">КАТАЛОГ</a>
+            <a href="#">Каталог</a>
           </li>
           <li>
-            <a href="#">ИНСТРУМЕНТ</a>
+            <a href="#">Инструмент</a>
           </li>
           <li>
-            <a href="#">ПЕРФОРАТОРЫ</a>
+            <a href="#">Перфораторы</a>
+          </li>
+        </ul>
+        <p>Перфораторы</p>
+      </section>
+      <section>
+        <h2>Сортировка:</h2>
+        <ul>
+          <li>
+            <button type="button">По цене</button>
+          </li>
+          <li>
+            <button type="button">По типу</button>
+          </li>
+          <li>
+            <button type="button">По функционалу</button>
+          </li>
+          <li>
+            <button type="button"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по возрастанию"></button>
+          </li>
+          <li>
+            <button type="button"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по убыванию"></button>
           </li>
         </ul>
       </section>
-      <p>Перфораторы</p>
-      <p>Фильтр:</p>
-      <p>Сортировка:</p>
-      <ul>
-        <li>
-          <button type="button">По цене</button>
-        </li>
-        <li>
-          <button type="button">По типу</button>
-        </li>
-        <li>
-          <button type="button">По функционалу</button>
-        </li>
-        <li>
-          <button type="button"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по возрастанию"></button>
-        </li>
-        <li>
-          <button type="button"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по убыванию"></button>
-        </li>
-      </ul>
-      <form action="https://echo.htmlacademy.ru" method="post">
-        <fieldset>
-          <legend>Цена:</legend>
-          <input type="range" name="price" min="0" max="30000" step="1000" value="0">
-          <input type="text" name="min-price" value="0">
-          <input type="text" name="max-price" value="30000">
-        </fieldset>
-        <fieldset>
-          <legend>Производители:</legend>
-          <label>
-            <input type="checkbox" name="manufacturer" checked value="BOSCH">
-            Bosch
-          </label>
-          <label>
-            <input type="checkbox" name="manufacturer" value="INTERSKOL">
-            Интерскол
-          </label>
-          <label>
-            <input type="checkbox" name="manufacturer" checked value="MAKITA">
-            Makita
-          </label>
-          <label>
-            <input type="checkbox" name="manufacturer" value="DEWALT">
-            Dewalt
-          </label>
-          <label>
-            <input type="checkbox" name="manufacturer" value="HITACHI">
-            Hitachi
-          </label>
-        </fieldset>
-        <fieldset>
-          <legend>Питание:</legend>
-          <label>
-            <input type="radio" name="power" checked value="battery">
-            Аккумуляторные
-          </label>
-          <label>
-            <input type="radio" name="power" value="grid">
-            Сетевые
-          </label>
-        </fieldset>
-        <button type="submit">Показать</button>
-      </form>
+      <section>
+        <h2>Фильтр:</h2>
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <fieldset>
+            <legend>Цена:</legend>
+            <input type="range" name="price" min="0" max="30000" step="1000" value="0">
+            <input type="text" name="min-price" value="0">
+            <input type="text" name="max-price" value="30000">
+          </fieldset>
+          <fieldset>
+            <legend>Производители:</legend>
+            <label>
+              <input type="checkbox" name="manufacturer" checked value="BOSCH">
+              Bosch
+            </label>
+            <label>
+              <input type="checkbox" name="manufacturer" value="INTERSKOL">
+              Интерскол
+            </label>
+            <label>
+              <input type="checkbox" name="manufacturer" checked value="MAKITA">
+              Makita
+            </label>
+            <label>
+              <input type="checkbox" name="manufacturer" value="DEWALT">
+              Dewalt
+            </label>
+            <label>
+              <input type="checkbox" name="manufacturer" value="HITACHI">
+              Hitachi
+            </label>
+          </fieldset>
+          <fieldset>
+            <legend>Питание:</legend>
+            <label>
+              <input type="radio" name="power" checked value="battery">
+              Аккумуляторные
+            </label>
+            <label>
+              <input type="radio" name="power" value="grid">
+              Сетевые
+            </label>
+          </fieldset>
+          <button type="submit">Показать</button>
+        </form>
+      </section>
       <section>
         <h2>Карточки товаров</h2>
         <ul>
           <li>
-            <a href="#">
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <p>25500 Р.</p>
-            </a>
+            <img src="img/bosch-bfg-6000.jpg" width="184" height="164" alt="Синий перфоратор с обычным буром, упором и аккумулятором">
+            <button type="button">Купить</button>
+            <button type="button">В закладки</button>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
           </li>
           <li>
-            <a href="#">
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <p>25500 Р.</p>
-            </a>
+            <img src="img/bosch-bfg-6000.jpg" width="184" height="164" alt="Синий перфоратор с обычным буром, упором и аккумулятором">
+            <button type="button">Купить</button>
+            <button type="button">В закладки</button>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
           </li>
           <li>
-            <a href="#">
-              <p>New</p>
-              <p>Купить</p>
-              <p>В закладки</p>
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <p>25500 Р.</p>
-            </a>
+            <p>New</p>
+            <img src="img/bosch-bfg-6000.jpg" width="184" height="164" alt="Синий перфоратор с обычным буром, упором и аккумулятором">
+            <button type="button">Купить</button>
+            <button type="button">В закладки</button>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
           </li>
           <li>
-            <a href="#">
-              <p>New</p>
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <p>22500 Р.</p>
-              <p>15500 Р.</p>
-            </a>
+            <p>New</p>
+            <img src="img/bosch-bfg-3000.jpg" width="184" height="164" alt="Синий перфоратор с коротким буром и аккумулятором">
+            <button type="button">Купить</button>
+            <button type="button">В закладки</button>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <p>22500 Р.</p>
+            <p>15500 Р.</p>
           </li>
           <li>
-            <a href="#">
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <p>25500 Р.</p>
-            </a>
+            <img src="img/bosch-bfg-6000.jpg" width="184" height="164" alt="Синий перфоратор с обычным буром, упором и аккумулятором">
+            <button type="button">Купить</button>
+            <button type="button">В закладки</button>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
           </li>
           <li>
-            <a href="#">  
-              <p>New</p>
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
-              <h3>Перфоратор BOSCH BFG 2000</h3>
-              <p>12500 Р.</p>
-            </a>
+            <p>New</p>
+            <img src="img/bosch-bfg-2000.jpg" width="184" height="164" alt="Синий перфоратор с коротким буром и аккумулятором">
+            <button type="button">Купить</button>
+            <button type="button">В закладки</button>
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <p>12500 Р.</p>
           </li>
           <li>
-            <a href="#">
-              <p>New</p>
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <p>22500 Р.</p>
-              <p>15500 Р.</p>
-            </a>
+            <p>New</p>
+            <img src="img/bosch-bfg-3000.jpg" width="184" height="164" alt="Синий перфоратор с коротким буром и аккумулятором">
+            <button type="button">Купить</button>
+            <button type="button">В закладки</button>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <p>22500 Р.</p>
+            <p>15500 Р.</p>
           </li>
           <li>
-            <a href="#">
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <p>25500 Р.</p>
-            </a>
+            <img src="img/bosch-bfg-6000.jpg" width="184" height="164" alt="Синий перфоратор с обычным буром, упором и аккумулятором">
+            <button type="button">Купить</button>
+            <button type="button">В закладки</button>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
           </li>
           <li>
-            <a href="#">
-              <p>New</p>
-              <img src="https://via.placeholder.com/184x164" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
-              <h3>Перфоратор BOSCH BFG 2000</h3>
-              <p>12500 Р.</p>
-            </a>
+            <p>New</p>
+            <img src="img/bosch-bfg-2000.jpg" width="184" height="164" alt="Синий перфоратор с коротким буром и аккумулятором">
+            <button type="button">Купить</button>
+            <button type="button">В закладки</button>
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <p>12500 Р.</p>
           </li>
         </ul>
       </section>
@@ -272,7 +279,6 @@
     </footer>
     <section>
       <button type="button">Закрыть</button>
-      <img src="https://via.placeholder.com/66x66" width="66" height="66" alt="Белая галочка на круглом зелёном фоне">
       <h2>Товар добавлен в корзину!</h2>
       <button type="button">Оформить заказ</button>
       <button type="button">Продолжить покупки</button>
