inserted social networks icons

--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
       <p>Все права защищены</p>
       <ul>
         <li>
-          <a><img src="https://via.placeholder.com/44x44" width="44" height="44" alt="Вконтакте"></a>
+          <a><img src="img/vk-logo.svg" width="44" height="44" alt="Вконтакте"></a>
         </li>
         <li>
-          <a><img src="https://via.placeholder.com/44x44" width="44" height="44" alt="Фейсбук"></a>
+          <a><img src="img/fb-logo.svg" width="44" height="44" alt="Фейсбук"></a>
         </li>
         <li>
-          <a><img src="https://via.placeholder.com/44x44" width="44" height="44" alt="Инстаграм"></a>
+          <a><img src="img/instagram-logo.svg" width="44" height="44" alt="Инстаграм"></a>
         </li>
       </ul>
       <p>Обратная связь:</p>
