added favicon.ico to the project directory and replaced or removed dummy images

--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт - Главная</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/180.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header> 
-      <a href="#"><img src="https://via.placeholder.com/108x18" width="108" height="18" alt="Логотип Техномарт малый"></a>
+      <a href="#">Техномарт</a>
       <form action="https://echo.htmlacademy.ru" method="post">
-        <label>
-          <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
-          <input type="text" name="search" placeholder="Поиск:">
-        </label>
+        <input type="text" name="search" placeholder="Поиск:">
       </form>
       <ul>
         <li>
@@ -68,8 +65,8 @@
             <p>Соседям на радость!</p>
             <img src="img/man-with-drill.jpg" width="620" height="266" alt="Мужчина сверлит кирпичную стену дрелью">
           </div>
-          <button type="button"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка влево"></button>
-          <button type="button"><img src="https://via.placeholder.com/22x40" width="22" height="40" alt="Стрелка вправо"></button>
+          <button type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Стрелка влево"></button>
+          <button type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Стрелка вправо"></button>
           <button type="button" name="drills" disabled></button>
           <button type="button" name="perforators"></button>
           <a href="catalog.html">Открыть каталог</a>
@@ -221,7 +218,7 @@
       </section>
       <section>
         <h2>Нижнее навигационное меню и контакты</h2>
-        <a href="#"><img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип Техномарт большой"></a>
+        <a href="#">Техномарт</a>
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
