--- a/catalog.html
+++ b/catalog.html
@@ -4,18 +4,15 @@
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт - Каталог</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/180.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header> 
-      <a href="index.html"><img src="https://via.placeholder.com/108x18" width="108" height="18" alt="Логотип Техномарт малый"></a>
+      <a href="index.html">Техномарт</a>
       <form action="https://echo.htmlacademy.ru" method="post">
-        <label>
-          <img src="https://via.placeholder.com/17x17" width="17" height="17" alt="Иконка поиска">
-          <input type="text" name="search" placeholder="Поиск:">
-        </label>
+        <input type="text" name="search" placeholder="Поиск:">
       </form>
       <ul>
         <li>
@@ -63,7 +60,7 @@
         <h2>Хлебные крошки</h2>
         <ul>
           <li>
-            <a href="index.html"><img src="https://via.placeholder.com/14x12" width="14" height="12" alt="Домой"></a>
+            <a href="index.html"><img src="img/icon-home.svg" width="14" height="12" alt="Домой"></a>
           </li>
           <li>
             <a href="#">Каталог</a>
@@ -90,10 +87,10 @@
             <button type="button">По функционалу</button>
           </li>
           <li>
-            <button type="button"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по возрастанию"></button>
+            <button type="button"><img src="img/icon-up.svg" width="11" height="10" alt="Стрелка сортировки по возрастанию"></button>
           </li>
           <li>
-            <button type="button"><img src="https://via.placeholder.com/11x10" width="11" height="10" alt="Стрелка сортировки по убыванию"></button>
+            <button type="button"><img src="img/icon-down.svg" width="11" height="10" alt="Стрелка сортировки по убыванию"></button>
           </li>
         </ul>
       </section>
@@ -238,7 +235,7 @@
       </article>
       <section>
         <h2>Нижнее навигационное меню и контакты</h2>
-        <a href="index.html"><img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип Техномарт большой"></a>
+        <a href="index.html">Техномарт</a>
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
