returned labels for the search input elements back

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <header> 
       <a href="#">Техномарт</a>
       <form action="https://echo.htmlacademy.ru" method="post">
-        <input type="text" name="search" placeholder="Поиск:">
+        <label>
+          Поле поиска
+          <input type="text" name="search" placeholder="Поиск:">
+        </label>
       </form>
       <ul>
         <li>
