--- a/index.html
+++ b/index.html
@@ -227,19 +227,19 @@
         <a href="#" class="large-logo">Техномарт</a>
         <ul class="site-navigation">
           <li>
-            <a href="#">Компания</a>
+            <a href="#" class="bottom-infoblock-link">Компания</a>
           </li>
           <li>
-            <a href="#">Новости</a>
+            <a href="#" class="bottom-infoblock-link">Новости</a>
           </li>
           <li>
-            <a href="catalog.html">Каталог</a>
+            <a href="catalog.html" class="bottom-infoblock-link">Каталог</a>
           </li>
           <li>
-            <a href="#">Доставка</a>
+            <a href="#" class="bottom-infoblock-link">Доставка</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="#" class="bottom-infoblock-link">Контакты</a>
           </li>
         </ul>
         <address class="bottom-infoblock-contacts">
@@ -270,7 +270,7 @@
           <a href="#" class="social-button"><img src="img/vk-logo.svg" width="44" height="44" alt="Вконтакте"></a>
         </li>
         <li class="social-links-list-item">
-          <a href="#" class="social-button"><img src="img/fb-logo.svg" width="44" height="44" alt="Фейсбук"></a>
+          <a href="#" class="social-button"><img src="img/facebook-logo.svg" width="44" height="44" alt="Фейсбук"></a>
         </li>
         <li class="social-links-list-item">
           <a href="#" class="social-button"><img src="img/instagram-logo.svg" width="44" height="44" alt="Инстаграм"></a>
@@ -283,7 +283,9 @@
     </footer>
     <section class="modal modal-feedback">
       <h2 class="modal-feedback-title">Форма обратной связи</h2>
-      <button type="button" class="modal-close">Закрыть</button>
+      <button type="button" class="modal-close">
+        <img src="img/red-cross.svg" alt="Закрыть">
+      </button>
       <form action="https://echo.htmlacademy.ru" method="post" class="feedback-form">
         <label class="text-large">Ваше имя:
           <input type="text" name="name" placeholder="Имя Фамилия" class="feedback-first-name">
@@ -301,7 +303,9 @@
     </section>
     <section class="modal modal-map">
       <h2 class="modal-map-title">Как до нас добраться</h2>
-      <button type="button" class="modal-close">Закрыть</button>
+      <button type="button" class="modal-close">
+        <img src="img/red-cross.svg" alt="Закрыть">
+      </button>
       <img src="img/map.png" width="943" height="449" alt="Карта">
     </section>
   </body>
