implemented visually-hidden pattern and some other minor changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="header-top-row">
         <a href="#" class="small-logo">Техномарт</a>
         <form action="https://echo.htmlacademy.ru" method="post" class="search-form">
-          <label for="#search">Поле поиска</label>
+          <label for="search" class="visually-hidden">Поле поиска</label>
           <input type="text" name="search" id="search" placeholder="Поиск:" class="search-input">
         </form>
         <ul class="header-top-row-list">
@@ -57,9 +57,9 @@
       </nav>
     </header>
     <main class="container">
-      <h1>Интернет-магазин Техномарт - Главная</h1>
+      <h1 class="visually-hidden">Интернет-магазин Техномарт - Главная</h1>
       <section class="promo-products-and-services">
-        <h2 class="promo-products-and-services-title">Промо-блок: товары и услуги</h2>
+        <h2 class="visually-hidden">Промо-блок: товары и услуги</h2>
         <div class="slider">
           <div class="slide">
             <h3 class="slider-header">Перфораторы</h3>
@@ -223,7 +223,7 @@
         <a href="#" class="button">Заблудились? Напишите нам!</a>
       </section>
       <section class="bottom-infoblock">
-        <h2 class="bottom-infoblock-title">Нижнее навигационное меню и контакты</h2>
+        <h2 class="visually-hidden">Нижнее навигационное меню и контакты</h2>
         <a href="#" class="large-logo">Техномарт</a>
         <ul class="site-navigation">
           <li>
@@ -282,7 +282,7 @@
       <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-link">htmlacademy.ru</a>
     </footer>
     <section class="modal modal-feedback">
-      <h2 class="modal-feedback-title">Форма обратной связи</h2>
+      <h2 class="visually-hidden">Форма обратной связи</h2>
       <button type="button" class="modal-close">
         <img src="img/red-cross.svg" alt="Закрыть">
       </button>
@@ -302,7 +302,7 @@
       </form>
     </section>
     <section class="modal modal-map">
-      <h2 class="modal-map-title">Как до нас добраться</h2>
+      <h2 class="visually-hidden">Как до нас добраться</h2>
       <button type="button" class="modal-close">
         <img src="img/red-cross.svg" alt="Закрыть">
       </button>
